已经把ac库引入进来不需要加载为库

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CFLAGS += -g --pedantic
 CFLAGS += -fPIC
 
-MULTIFAST_AHO := ../../multifast-v1.0.0/ahocorasick
-CFLAGS += -I $(MULTIFAST_AHO)
+#MULTIFAST_AHO := ../../multifast-v1.0.0/ahocorasick
+#CFLAGS += -I $(MULTIFAST_AHO)
 LIBS   += -L $(MULTIFAST_AHO) -lahocorasick
 
 OUT := lahocorasick.so
